<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/album"
            style="@style/BannerBaseStyle"
            android:text="@string/category_album" />

        <TextView
            android:id="@+id/artist"
            style="@style/BannerBaseStyle"
            android:text="@string/category_artist" />


        <TextView
            android:id="@+id/playlist"
            style="@style/BannerBaseStyle"
            android:text="@string/category_playlist" />

        <TextView
            android:id="@+id/track"
            style="@style/BannerBaseStyle"
            android:text="@string/category_track" />


    </LinearLayout>

    <TextView
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_Description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/skip_previous_1"
                style="@style/playerButton"
                android:src="@drawable/ic_skip_previous_white_36dp" />

            <ImageView
                android:id="@+id/play_1"
                style="@style/playerButton"
                android:src="@drawable/ic_play_arrow_white_36dp" />

            <ImageView
                android:id="@+id/pause_1"
                style="@style/playerButton"
                android:src="@drawable/ic_pause_white_36dp" />

            <ImageView
                android:id="@+id/skip_next_1"
                style="@style/playerButton"
                android:src="@drawable/ic_skip_next_white_36dp" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

